tests/errors/runtime.KeyNotFound.art
dict: #[
    name: "John"
    surname: "Doe"
    age: 34
]

print dict\name
print dict\surname
print dict\country
print dict\age